refactor: domain 수정